--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,4 +6,4 @@
   <label for="inputImage">ProfileImage</label>
   <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
   <%= f.submit "変更を保存" %>
-<% end %
+<% end %>
